Fix scrollbar in upgrade modal
## Issue
5848 Remove scroll-bar in update prompt

## Changes
- Make scrollbars appear only when necessary.
- Style the scrollbar. Similar to other areas, we skip this for Mac (can't recall why we need to skip).

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -485,7 +485,7 @@ textarea {
 
 .release__notes {
   max-height: 50vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .signup__odysee-logo {
