--- a/web/scss/themes/odysee/init/_gui.scss
+++ b/web/scss/themes/odysee/init/_gui.scss
@@ -488,7 +488,7 @@ textarea {
 
 .release__notes {
   max-height: 50vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .signup__odysee-logo {
